config screen, fixes